# raceday

./: .gitignore  Cargo.toml  README.md  index.html  index.html.old.github  index.json
build-python/: raceday-prep.spec
build-python/raceday-prep/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-raceday-prep.txt  xref-raceday-prep.html
scripts/: humanize_description.py  raceday-prep.py
src/: main.rs
templates/: report.html
